welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:7: error: not found: value avancer
    case "R" => droite(); avancer()
                          ^BDR2:8: error: not found: value avancer
    case "L" => gauche(); avancer()
                          ^BDR2:9: error: not found: value avancer
    case "I" => retourne(); avancer()
                            ^BDR2:10: error: not found: value avancer
    case i if i <= "F"  => avancer(message)
                           ^