welcome.lessons.welcome.bdr.BDR2.scala.code
var message:String = ""

while (message != "Arret")
{
  litMessage() match
  {
    case "R" => droite(); avancer()
    case "L" => gauche(); avancer()
    case "I" => retourne(); avancer()
    case i if i <= "F"  => avancer(message)
  }
}